# dlgt

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compose.e2e.yaml  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: dlgt-skill.md
docs/: cli.md  design.md  index.md  installation-instruction.md  installation.md  orchestrator-landscape.md  rpc.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Home.vue  index.ts  style.css
src/: client.rs  codex.rs  daemon.rs  main.rs  paths.rs  protocol.rs  provider.rs  raw_mode.rs  reaper.rs  session.rs  skill.rs  store.rs  update.rs
tests/: cli_help.rs  install.sh  reaper.rs  smoke.sh
tests/docker/: Dockerfile  README.md
tests/fixtures/: fake-agent.sh
